discussion/kv_engine/174946/174946_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52134: ByID scan support for MagmaKVStore

Implement the scan(ByIdScanContext) function utilising magma's
KeyIterator.

OSO and RangeScan tests are enabled to give coverage of this feature
along with Nexus support.

Change-Id: Ida6b030175077920c854ee492d1f7cfb2ae659b4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-24 11:38:11.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-24 11:46:42.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46376/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(539): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46376/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17712/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17712/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17712/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18690/ : FAILURE

Compile error at [2022-05-24T11:46:05.655Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18690/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7427/ : FAILURE

Compile error at [2022-05-24T11:46:19.835Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7427/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7326/ : FAILURE

Compile error at [2022-05-24T11:45:43.660Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7326/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19840/ : FAILURE

Compile error at [2022-05-24T11:42:49.801Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19840/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20504/ : FAILURE

Compile error at [2022-05-24T11:40:41.132Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20504/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19490/ : FAILURE

Compile error at [2022-05-24T11:41:40.819Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19490/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27889/ : FAILURE

Compile error at [2022-05-24T11:43:46.031Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:539:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27889/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16738/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38973/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
